--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -6,6 +6,6 @@ hero:
   tagline: JavaScript examples of the Web APIs
   actions:
     - text: Get Started
-      link: /web-apis/introduction
+      link: /web-apis/js/introduction
       icon: right-arrow
 ---
