Add Keyboard API further reading

--- a/src/content/docs/js/K/Keyboard.mdx
+++ b/src/content/docs/js/K/Keyboard.mdx
@@ -88,3 +88,11 @@ for (const [key, value] of layoutMap.entries()) {
 >
   Keyboard API - Web APIs | MDN
 </LinkButton>
+
+## Further reading
+
+- [Keyboard Map Permissions Policy](https://wicg.github.io/keyboard-map/#integrations)
+- [WICG/keyboard-map: getLayoutMap() is unavailable in sub-context web applications due to privacy mitigations](https://github.com/WICG/keyboard-map/issues/38)
+- [w3c/webappsec-permissions-policy: Add keyboard-map feature policy](https://github.com/w3c/webappsec-permissions-policy/pull/428/)
+- [w3ctag/design-reviews: Feature policy for Keyboard API](https://github.com/w3ctag/design-reviews/issues/685)
+- [Reddit: Google Chrome 97 introduces controversial keyboard API (enabling potential fingerprinting)](https://www.reddit.com/r/programming/comments/rwqxay/google_chrome_97_introduces_controversial/)
