--- a/src/content/docs/js/K/Keyboard.mdx
+++ b/src/content/docs/js/K/Keyboard.mdx
@@ -10,7 +10,7 @@ actions:
 ---
 
 import { LinkButton, LinkCard } from "@astrojs/starlight/components";
-import Console from './src/components/Console.astro';
+import Console from '@components/Console.astro';
 
 The Keyboard API provides methods for working with a physical keyboard that is attached to a device running a browser.
 
