Remove unused import

--- a/src/content/docs/js/K/Keyboard.mdx
+++ b/src/content/docs/js/K/Keyboard.mdx
@@ -9,7 +9,7 @@ actions:
       target: _blank
 ---
 
-import { LinkButton, LinkCard } from "@astrojs/starlight/components";
+import { LinkCard } from "@astrojs/starlight/components";
 import Console from '@components/Console.astro';
 
 The Keyboard API provides methods for working with a physical keyboard that is attached to a device running a browser.
