--- a/src/content/docs/js/introduction.mdx
+++ b/src/content/docs/js/introduction.mdx
@@ -7,7 +7,11 @@ sidebar:
 
 import { LinkButton } from '@astrojs/starlight/components';
 
-Something about JavaScript Web APIs.
+The Web APIs extend the funtionality of the browser. Many are experimental and/or partially supported by the various browser vendors. Be cautious when using them on your Web app or site, ensuring your targeted browsers fully support them.
+
+This documention is intended to complement MDN, providing interactive examples that run directly in the browser.
+
+To get started, use the navigation or tap the Next button below.
 
 <LinkButton href="https://developer.mozilla.org/en-US/docs/Web/API" variant="secondary" icon="external" target="_blank">
   Web APIs | MDN
