Move Audio Output API sample to Overview

--- a/src/content/docs/js/A/Audio Output Devices API.mdx
+++ b/src/content/docs/js/A/Audio Output Devices API.mdx
@@ -13,16 +13,6 @@ The Audio Output Devices API allows web applications to prompt users about what 
   target="_blank"
 />
 
-## Methods
-
-### MediaDevices.selectAudioOutput()
-
-<LinkCard
-  title="MediaDevices: selectAudioOutput() method | MDN"
-  href="https://developer.mozilla.org/en-US/docs/Web/API/MediaDevices/selectAudioOutput"
-  target="_blank"
-/>
-
 ```js
 // audioOutputApi.js
 const audio = document.createElement("audio");
@@ -58,6 +48,18 @@ audio.play();
   audio.play();
 ' />
 
+## Methods
+
+### MediaDevices.selectAudioOutput()
+
+<LinkCard
+  title="MediaDevices: selectAudioOutput() method | MDN"
+  href="https://developer.mozilla.org/en-US/docs/Web/API/MediaDevices/selectAudioOutput"
+  target="_blank"
+/>
+
+See [Overview](#_top).
+
 ### HTMLMediaElement.setSinkId()
 
 <LinkCard
@@ -66,7 +68,7 @@ audio.play();
   target="_blank"
 />
 
-See [MediaDevices.selectAudioOutput()](#mediadevicesselectaudiooutput).
+See [Overview](#_top).
 
 ## Properties
 
@@ -78,4 +80,4 @@ See [MediaDevices.selectAudioOutput()](#mediadevicesselectaudiooutput).
   target="_blank"
 />
 
-See [MediaDevices.selectAudioOutput()](#mediadevicesselectaudiooutput).
+See [Overview](#_top).
