--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,11 +1,19 @@
 ---
 title: Web APIs
-description: JavaScript examples of Web APIs
+description: Interactive Web API examples in JavaScript
 template: splash
+next:
+  link: /web-apis/js/introduction/
+  label: Introduction
 hero:
-  tagline: JavaScript examples of the Web APIs
+  tagline: Interactive Web API examples in JavaScript.
   actions:
     - text: Get Started
       link: /web-apis/js/introduction
       icon: right-arrow
+    - text: Web APIs | MDN
+      link: https://developer.mozilla.org/en-US/docs/Web/API
+      variant: secondary
+      icon: external
+      attrs: { target: _blank }
 ---
