--- a/src/content/docs/js/introduction.mdx
+++ b/src/content/docs/js/introduction.mdx
@@ -9,7 +9,7 @@ import { LinkButton } from '@astrojs/starlight/components';
 
 The Web APIs extend the funtionality of the browser. Many are experimental and/or partially supported by the various browser vendors. Be cautious when using them on your Web app or site, ensuring your targeted browsers fully support them.
 
-This documention is intended to complement MDN, providing interactive examples that run directly in the browser.
+This documention is intended to complement MDN, providing interactive examples that run directly in the browser. The examples are written to work in the browsers that support them at the time of their writing. Browser support may have changed since they were originally written so if things aren't working as you'd expect, PRs are welcome.
 
 To get started, use the navigation or tap the Next button below.
 
