Add Playground component and snippets

--- a/src/content/docs/js/A/Audio Output Devices API.mdx
+++ b/src/content/docs/js/A/Audio Output Devices API.mdx
@@ -3,7 +3,8 @@ title: Audio Output Devices API
 ---
 
 import { LinkCard } from "@astrojs/starlight/components";
-import Console from '@components/Console.astro';
+import Playground from '@components/Playground';
+import Audio_Output_Devices_API from '@snippets/Audio Output Devices API.js?raw';
 
 The Audio Output Devices API allows web applications to prompt users about what output device should be used for audio playback.
 
@@ -13,40 +14,7 @@ The Audio Output Devices API allows web applications to prompt users about what 
   target="_blank"
 />
 
-```js
-// audioOutputApi.js
-const audio = document.createElement("audio");
-const currentSink = audio.sinkId || "default user agent device";
-console.log(`Current audio device id: ${currentSink}`);
-
-console.log("Prompting user for device selection...");
-const device = await navigator.mediaDevices.selectAudioOutput();
-console.log(`Device selected: ${JSON.stringify(device, null, 2)}`);
-
-await audio.setSinkId(device.deviceId);
-console.log(`New audio device id: ${audio.sinkId}`);
-
-console.log("Playing the audio from the selected output device...");
-audio.src = "//samplelib.com/lib/preview/mp3/sample-3s.mp3";
-audio.play();
-```
-
-<Console script='
-  const audio = document.createElement("audio");
-  const currentSink = audio.sinkId || "default user agent device";
-  console.log(`Current audio device id: ${currentSink}`);
-
-  console.log("Prompting user for device selection...");
-  const device = await navigator.mediaDevices.selectAudioOutput();
-  console.log(`Device selected: ${JSON.stringify(device, null, 2)}`);
-
-  await audio.setSinkId(device.deviceId);
-  console.log(`New audio device id: ${audio.sinkId}`);
-
-  console.log("Playing the audio from the selected output device...");
-  audio.src = "//samplelib.com/lib/preview/mp3/sample-3s.mp3";
-  audio.play();
-' />
+<Playground client:only="react" theme="dark" script={Audio_Output_Devices_API}/>
 
 ## Methods
 
