Add MDN link for Navigator.sendBeacon

--- a/src/content/docs/js/B/Beacon API.mdx
+++ b/src/content/docs/js/B/Beacon API.mdx
@@ -18,4 +18,10 @@ The Beacon API is used to send an asynchronous and non-blocking request to a web
 
 ### Navigator.sendBeacon()
 
+<LinkCard
+  title="Navigator: sendBeacon() method | MDN"
+  href="https://developer.mozilla.org/en-US/docs/Web/API/Navigator/sendBeacon"
+  target="_blank"
+/>
+
 <Playground client:only="react" theme="dark" script={Navigator_sendBeacon} />
