--- a/src/content/docs/js/B/Badging API.mdx
+++ b/src/content/docs/js/B/Badging API.mdx
@@ -21,8 +21,20 @@ In a desktop browser, to see the results of the Badging API, you'll need to pin 
 
 ### Navigator.setAppBadge()
 
+<LinkCard
+  title="Navigator: setAppBadge() method | MDN"
+  href="https://developer.mozilla.org/en-US/docs/Web/API/Navigator/setAppBadge"
+  target="_blank"
+/>
+
 <Playground client:only="react" theme="dark" script={Navigator_setAppBadge} />
 
 ### Navigator.clearAppBadge()
+
+<LinkCard
+  title="Navigator: clearAppBadge() method | MDN"
+  href="https://developer.mozilla.org/en-US/docs/Web/API/Navigator/clearAppBadge"
+  target="_blank"
+/>
 
 <Playground client:only="react" theme="dark" script={Navigator_clearAppBadge} />
