--- a/src/content/docs/js/B/Broadcast Channel API.mdx
+++ b/src/content/docs/js/B/Broadcast Channel API.mdx
@@ -22,7 +22,7 @@ By creating a `BroadcastChannel` object, you can receive any messages that are p
 <Aside type="caution">
   Be sure to run the code on each tab below!
 
-  The **Sender** tab send the messages and the **Receiver** tabs receive them!
+  The **Sender** tab sends the messages and the **Receiver** tabs receive them!
 </Aside>
 
 <Tabs>
