Add HTML and CSS editors

--- a/src/content/docs/js/B/Badging API.mdx
+++ b/src/content/docs/js/B/Badging API.mdx
@@ -27,7 +27,7 @@ In a desktop browser, to see the results of the Badging API, you'll need to pin 
   target="_blank"
 />
 
-<Playground client:only="react" theme="dark" script={Navigator_setAppBadge} />
+<Playground client:only="react" languages={ { js: Navigator_setAppBadge} } />
 
 ### Navigator.clearAppBadge()
 
@@ -37,4 +37,4 @@ In a desktop browser, to see the results of the Badging API, you'll need to pin 
   target="_blank"
 />
 
-<Playground client:only="react" theme="dark" script={Navigator_clearAppBadge} />
+<Playground client:only="react" languages={ { js: Navigator_clearAppBadge} } />
