--- a/src/content/docs/js/B/Battery Status API.mdx
+++ b/src/content/docs/js/B/Battery Status API.mdx
@@ -16,7 +16,7 @@ This can be used to adjust your app's resource usage to reduce battery drain whe
   target="_blank"
 />
 
-<Playground client:only="react" theme="dark" script={Battery_Status_API} />
+<Playground client:only="react" languages={ { js: Battery_Status_API} } />
 
 ## Methods
 
