--- a/src/content/docs/js/B/Beacon API.mdx
+++ b/src/content/docs/js/B/Beacon API.mdx
@@ -24,4 +24,4 @@ The Beacon API is used to send an asynchronous and non-blocking request to a web
   target="_blank"
 />
 
-<Playground client:only="react" theme="dark" script={Navigator_sendBeacon} />
+<Playground client:only="react" languages={ { js: Navigator_sendBeacon} } />
