--- a/src/content/docs/js/B/Broadcast Channel API.mdx
+++ b/src/content/docs/js/B/Broadcast Channel API.mdx
@@ -27,12 +27,12 @@ By creating a `BroadcastChannel` object, you can receive any messages that are p
 
 <Tabs>
   <TabItem label="Sender" icon="rss">
-    <Playground client:only="react" theme="dark" script={Sender} />
+    <Playground client:only="react" languages={ { js: Sender } } />
   </TabItem>
   <TabItem label="Receiver 1">
-    <Playground client:only="react" theme="dark" script={Receiver1} />
+    <Playground client:only="react" languages={ { js: Receiver1 } } />
   </TabItem>
   <TabItem label="Receiver 2">
-    <Playground client:only="react" theme="dark" script={Receiver2} />
+    <Playground client:only="react" languages={ { js: Receiver2 } } />
   </TabItem>
 </Tabs>
