--- a/src/content/docs/js/K/Keyboard.mdx
+++ b/src/content/docs/js/K/Keyboard.mdx
@@ -25,7 +25,7 @@ The Keyboard API provides methods for working with a physical keyboard that is a
   target="_blank"
 />
 
-<Playground client:only="react" theme="dark" script={Keyboard_getLayoutMap} />
+<Playground client:only="react" languages={ { js: Keyboard_getLayoutMap } } />
 
 ### lock()
 
@@ -35,7 +35,7 @@ The Keyboard API provides methods for working with a physical keyboard that is a
   target="_blank"
 />
 
-<Playground client:only="react" theme="dark" script={Keyboard_lock} />
+<Playground client:only="react" languages={ { js: Keyboard_lock } } />
 
 ## Further reading
 
