--- a/src/content/docs/js/A/Audio Output Devices API.mdx
+++ b/src/content/docs/js/A/Audio Output Devices API.mdx
@@ -14,7 +14,7 @@ The Audio Output Devices API allows web applications to prompt users about what 
   target="_blank"
 />
 
-<Playground client:only="react" theme="dark" script={Audio_Output_Devices_API}/>
+<Playground client:only="react" languages={ { js: Audio_Output_Devices_API} }/>
 
 ## Methods
 
