Apply HTML and CSS too

--- a/src/content/docs/js/C/CSS Custom Highlight API.mdx
+++ b/src/content/docs/js/C/CSS Custom Highlight API.mdx
@@ -14,4 +14,4 @@ The CSS Custom Highlight API provides a mechanism for styling arbitrary text ran
   target="_blank"
 />
 
-<Playground client:only="react" theme="dark" languages={ { js: '//js', html: '<html></html>', css: '.red { color: red; }' }} />
+<Playground client:only="react" theme="dark" languages={ { js: 'console.log(1);', html: '<p class="red">hello world</p>', css: '.red { color: red; }' }} />
