Remove unnecessary theme prop

--- a/src/content/docs/js/C/CSS Custom Highlight API.mdx
+++ b/src/content/docs/js/C/CSS Custom Highlight API.mdx
@@ -16,7 +16,7 @@ The CSS Custom Highlight API provides a mechanism for styling arbitrary text ran
   target="_blank"
 />
 
-<Playground client:only="react" theme="dark" languages={
+<Playground client:only="react" languages={
   {
     js: CSS_Custom_Highlight_API_js,
     html: CSS_Custom_Highlight_API_html,
