--- a/src/content/docs/js/C/Compute Pressure API.mdx
+++ b/src/content/docs/js/C/Compute Pressure API.mdx
@@ -6,7 +6,7 @@ import { LinkCard } from '@astrojs/starlight/components';
 import Playground from '@components/Playground';
 import Compute_Pressure_API from '@snippets/Compute Pressure API.js?raw';
 
-The CSS Custom Highlight API provides a mechanism for styling arbitrary text ranges on a document by using JavaScript to create the ranges, and CSS to style them.
+The Compute Pressure API lets you detect which pressure the system is currently facing.
 
 <LinkCard
   title="Compute Pressure API - Web APIs | MDN"
