--- a/src/content/docs/js/C/Channel Messaging API.mdx
+++ b/src/content/docs/js/C/Channel Messaging API.mdx
@@ -1,5 +1,5 @@
 ---
-title: Channel Message API
+title: Channel Messaging API
 ---
 
 import { Aside, LinkCard, TabItem, Tabs } from '@astrojs/starlight/components';
