--- a/src/content/docs/js/C/Channel Messaging API.mdx
+++ b/src/content/docs/js/C/Channel Messaging API.mdx
@@ -14,12 +14,6 @@ import sender_js from '@snippets/Channel Messaging API/sender.js?raw';
 
 The Channel Messaging API allows two separate scripts running in different browsing contexts attached to the same document to communicate directly, passing messages between one another through two-way channels with a port at each end.
 
-<LinkCard
-  title="Channel Messaging API - Web APIs | MDN"
-  href="https://developer.mozilla.org/en-US/docs/Web/API/Channel_Messaging_API"
-  target="_blank"
-/>
-
 <PlaygroundSet
   client:only="react"
   playgroundPropsArr={[
@@ -49,4 +43,12 @@ The Channel Messaging API allows two separate scripts running in different brows
       iframeSrc: 'receiver.html',
     },
   }}
+/>
+
+## References
+
+<LinkCard
+  title="Channel Messaging API - Web APIs | MDN"
+  href="https://developer.mozilla.org/en-US/docs/Web/API/Channel_Messaging_API"
+  target="_blank"
 />
