--- a/src/content/docs/js/C/Compute Pressure API.mdx
+++ b/src/content/docs/js/C/Compute Pressure API.mdx
@@ -8,10 +8,12 @@ import Compute_Pressure_API from '@snippets/Compute Pressure API.js?raw';
 
 The Compute Pressure API lets you detect which pressure the system is currently facing.
 
+<Playground client:only="react" languages={{ js: Compute_Pressure_API }} />
+
+## References
+
 <LinkCard
   title="Compute Pressure API - Web APIs | MDN"
   href="https://developer.mozilla.org/en-US/docs/Web/API/Compute_Pressure_API"
   target="_blank"
 />
-
-<Playground client:only="react" languages={{ js: Compute_Pressure_API }} />
