--- a/src/content/docs/js/D/Document Picture-in-Picture API.mdx
+++ b/src/content/docs/js/D/Document Picture-in-Picture API.mdx
@@ -10,12 +10,6 @@ import Document_Picture_in_Picture_API_js from '@snippets/Document Picture-in-Pi
 
 The Document Picture-in-Picture API makes it possible to open an always-on-top window that can be populated with arbitrary HTML content.
 
-<LinkCard
-  title="Document Picture-in-Picture API | MDN"
-  href="https://developer.mozilla.org/en-US/docs/Web/API/Document_Picture-in-Picture_API"
-  target="_blank"
-/>
-
 <Playground
   client:only="react"
   languages={{
@@ -23,4 +17,12 @@ The Document Picture-in-Picture API makes it possible to open an always-on-top w
     html: Document_Picture_in_Picture_API_html,
     css: Document_Picture_in_Picture_API_css,
   }}
+/>
+
+## References
+
+<LinkCard
+  title="Document Picture-in-Picture API | MDN"
+  href="https://developer.mozilla.org/en-US/docs/Web/API/Document_Picture-in-Picture_API"
+  target="_blank"
 />
