--- a/src/content/docs/js/A/Audio Output Devices API.mdx
+++ b/src/content/docs/js/A/Audio Output Devices API.mdx
@@ -2,50 +2,18 @@
 title: Audio Output Devices API
 ---
 
-import { LinkCard } from "@astrojs/starlight/components";
+import { LinkCard } from '@astrojs/starlight/components';
 import Playground from '@components/Playground';
 import Audio_Output_Devices_API from '@snippets/Audio Output Devices API.js?raw';
 
 The Audio Output Devices API allows web applications to prompt users about what output device should be used for audio playback.
+
+<Playground client:only="react" languages={{ js: Audio_Output_Devices_API }} />
+
+## References
 
 <LinkCard
   title="Audio Output Devices API - Web APIs | MDN"
   href="https://developer.mozilla.org/en-US/docs/Web/API/Audio_Output_Devices_API"
   target="_blank"
 />
-
-<Playground client:only="react" languages={ { js: Audio_Output_Devices_API} }/>
-
-## Methods
-
-### MediaDevices.selectAudioOutput()
-
-<LinkCard
-  title="MediaDevices: selectAudioOutput() method | MDN"
-  href="https://developer.mozilla.org/en-US/docs/Web/API/MediaDevices/selectAudioOutput"
-  target="_blank"
-/>
-
-See [Overview](#_top).
-
-### HTMLMediaElement.setSinkId()
-
-<LinkCard
-  title="HTMLMediaElement: setSinkId() method | MDN"
-  href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLMediaElement/setSinkId"
-  target="_blank"
-/>
-
-See [Overview](#_top).
-
-## Properties
-
-### HTMLMediaElement.sinkId
-
-<LinkCard
-  title="HTMLMediaElement: sinkId property | MDN"
-  href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLMediaElement/sinkId"
-  target="_blank"
-/>
-
-See [Overview](#_top).
