--- a/src/content/docs/js/B/Broadcast Channel API.mdx
+++ b/src/content/docs/js/B/Broadcast Channel API.mdx
@@ -16,12 +16,6 @@ The Broadcast Channel API allows basic communication between browsing contexts a
 
 By creating a `BroadcastChannel` object, you can receive any messages that are posted to it. You don't have to maintain a reference to the frames or workers you wish to communicate with: they can "subscribe" to a particular channel by constructing their own `BroadcastChannel` with the same name, and have bi-directional communication between all of them.
 
-<LinkCard
-  title="Broadcast Channel API - Web APIs | MDN"
-  href="https://developer.mozilla.org/en-US/docs/Web/API/Broadcast_Channel_API"
-  target="_blank"
-/>
-
 <PlaygroundSet
   client:only="react"
   playgroundPropsArr={[
@@ -51,4 +45,12 @@ By creating a `BroadcastChannel` object, you can receive any messages that are p
       iframeSrc: 'receiver.html',
     },
   }}
+/>
+
+## References
+
+<LinkCard
+  title="Broadcast Channel API - Web APIs | MDN"
+  href="https://developer.mozilla.org/en-US/docs/Web/API/Broadcast_Channel_API"
+  target="_blank"
 />
