--- a/src/content/docs/js/K/Keyboard.mdx
+++ b/src/content/docs/js/K/Keyboard.mdx
@@ -2,22 +2,18 @@
 title: Keyboard
 ---
 
-import { LinkCard } from "@astrojs/starlight/components";
+import { LinkCard } from '@astrojs/starlight/components';
 import Playground from '@components/Playground';
 import Keyboard_getLayoutMap from '@snippets/Keyboard.getLayoutMap().js?raw';
 import Keyboard_lock from '@snippets/Keyboard.lock().js?raw';
 
 The Keyboard API provides methods for working with a physical keyboard that is attached to a device running a browser.
 
-<LinkCard
-  title="Keyboard API - Web APIs | MDN"
-  href="https://developer.mozilla.org/en-US/docs/Web/API/Keyboard_API"
-  target="_blank"
-/>
-
 ## Instance methods
 
 ### getLayoutMap()
+
+<Playground client:only="react" languages={{ js: Keyboard_getLayoutMap }} />
 
 <LinkCard
   title="Keyboard: getLayoutMap() method | MDN"
@@ -25,17 +21,15 @@ The Keyboard API provides methods for working with a physical keyboard that is a
   target="_blank"
 />
 
-<Playground client:only="react" languages={ { js: Keyboard_getLayoutMap } } />
-
 ### lock()
+
+<Playground client:only="react" languages={{ js: Keyboard_lock }} />
 
 <LinkCard
   title="Keyboard: lock() method | MDN"
   href="https://developer.mozilla.org/en-US/docs/Web/API/Keyboard/lock"
   target="_blank"
 />
-
-<Playground client:only="react" languages={ { js: Keyboard_lock } } />
 
 ## Further reading
 
@@ -44,3 +38,11 @@ The Keyboard API provides methods for working with a physical keyboard that is a
 - [w3c/webappsec-permissions-policy: Add keyboard-map feature policy](https://github.com/w3c/webappsec-permissions-policy/pull/428/)
 - [w3ctag/design-reviews: Feature policy for Keyboard API](https://github.com/w3ctag/design-reviews/issues/685)
 - [Reddit: Google Chrome 97 introduces controversial keyboard API (enabling potential fingerprinting)](https://www.reddit.com/r/programming/comments/rwqxay/google_chrome_97_introduces_controversial/)
+
+## References
+
+<LinkCard
+  title="Keyboard API - Web APIs | MDN"
+  href="https://developer.mozilla.org/en-US/docs/Web/API/Keyboard_API"
+  target="_blank"
+/>
